--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -1,5 +1,5 @@
 ---
-cflinuxfs2.tar.gz:
-  object_id: 62a0a53e-89a7-4a80-acab-7d806883c99f
+stacks/cflinuxfs2-1.20.0.tar.gz:
+  object_id: 17672476-a390-44f7-9fce-a59aca0f82ed
   sha: 0d0d6c2fb33dcbfd4b6478ce50b3d611712b3d8b
   size: 258115587
